[gd_scene load_steps=3 format=3 uid="uid://dg0ui7mem40lw"]

[ext_resource type="Script" path="res://scenes/inventory/item_container.gd" id="1_j7ijt"]
[ext_resource type="Script" path="res://scenes/inventory/shop.gd" id="1_v74ho"]

[node name="Buy" type="MarginContainer"]
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
script = ExtResource("1_v74ho")
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 6
script = ExtResource("1_j7ijt")

[node name="BuyInfo" type="Label" parent="VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BuyButton" type="Button" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Buy"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/BuyButton" to="." method="_on_buy_button_pressed"]
